bug: kitty default size decenters the terminal

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -52,8 +52,8 @@ enabled_layouts *
 # size as the previous instance. If disabled, the window will initially have size configured
 # by initial_window_width/height, in pixels.
 remember_window_size   yes
-initial_window_width   1280
-initial_window_height  800
+# initial_window_width   1280
+# initial_window_height  800
 
 # Delay (in milliseconds) between screen updates. Decreasing it, increases fps
 # at the cost of more CPU usage. The default value yields ~100fps which is more
