--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -97,37 +97,38 @@ window_margin_width 15
 # assigned in the default configuration.
 
 # Window management
-map Cmd+n			   new_os_window
-map Cmd+w              close_window
-map Cmd+shift+enter    new_window
-map Cmd+shift+]        next_window
-map Cmd+shift+[        previous_window
-map Cmd+shift+f        move_window_forward
-map Cmd+shift+b        move_window_backward
-map Cmd+shift+`        move_window_to_top
-map Cmd+shift+1        first_window
-map Cmd+shift+2        second_window
-map Cmd+shift+3        third_window
-map Cmd+shift+4        fourth_window
-map Cmd+shift+5        fifth_window
-map Cmd+shift+6        sixth_window
-map Cmd+shift+7        seventh_window
-map Cmd+shift+8        eighth_window
-map Cmd+shift+9        ninth_window
-map Cmd+shift+0        tenth_window
+map Cmd+n				new_os_window
+map Cmd+w				close_window
+map Cmd+shift+enter		new_window
+map Cmd+shift+]			next_window
+map Cmd+shift+[			previous_window
+map Cmd+shift+f			move_window_forward
+map Cmd+shift+b			move_window_backward
+map Cmd+shift+`			move_window_to_top
+map Cmd+shift+1			first_window
+map Cmd+shift+2			second_window
+map Cmd+shift+3			third_window
+map Cmd+shift+4			fourth_window
+map Cmd+shift+5			fifth_window
+map Cmd+shift+6			sixth_window
+map Cmd+shift+7			seventh_window
+map Cmd+shift+8			eighth_window
+map Cmd+shift+9			ninth_window
+map Cmd+shift+0			tenth_window
 
 # Tab management
-map Cmd+shift+right    next_tab
-map Cmd+shift+left     previous_tab
-map Cmd+shift+t        new_tab
-map Cmd+shift+q        close_tab
-map Cmd+shift+l        next_layout
-map Cmd+shift+.        move_tab_forward
-map Cmd+shift+,        move_tab_backward
+map Cmd+shift+right		next_tab
+map Cmd+shift+left		previous_tab
+map Cmd+shift+t			new_tab
+map Cmd+shift+q			close_tab
+map Cmd+shift+l			next_layout
+map Cmd+shift+.			move_tab_forward
+map Cmd+shift+,			move_tab_backward
+map Cmd+t				new_tab_with_cwd
 
 # Miscellaneous
-map Cmd+shift+up      increase_font_size
-map Cmd+shift+down    decrease_font_size
+map Cmd+shift+up		increase_font_size
+map Cmd+shift+down		decrease_font_size
 map Cmd+shift+backspace restore_font_size
 
 #
